add message asyn kafka
